package dominio.Localizacion;

public class Centroide {
    public Double lat;
    public Double lon;
}
