package dominio.Localizacion;

import java.util.List;

public class ListadoDeDepartamentos {
    private List<Departamento> departamentos;
}
